# Manyfold-processor

./: .dockerignore  .gitattributes  .gitignore  AGENT_SEPARATION_GUIDE.md  Archive_Log.md  Cargo.toml  Dockerfile  Project_Context.md  README.md  compose.yml  config.json  docker-compose.yml  manage.ps1  manage.sh  requirements.txt  test_output.txt
.agent/: constants.yml
.agent/annex/: 2026-01-30_agent_effective_patterns.md  2026-01-30_dev_hardware_snapshot.md  2026-01-30_governance_remediation.md  2026-01-30_workshop_notes.md  README.md
.agent/metrics/: audit_log.csv
.agent/skills/: README.md
.agent/tools/: Cargo.toml
.agent/tools/scripts/: run_full_audit.sh
.agent/tools/src/: fs.rs  lib.rs  parser.rs  report.rs
.agent/workflows/: audit_code_quality.md  audit_consistency.md  audit_constants.md  audit_context.md  audit_dependencies.md  audit_gherkin.md  audit_infrastructure.md  audit_masquerading.md  audit_skill_examples.md  audit_step_glue.md  audit_test_resources.md  audit_tool_alignment.md  audit_workflows.md  check_docs_consistency.md  check_implementation_alignment.md  feature_governance_integration.md  maintenance_annex_migration.md  maintenance_annex_review.md  maintenance_c4.md  maintenance_cleanup.md  maintenance_links.md  maintenance_metrics.md  suite_docs.md  suite_full_audit.md  suite_tests.md  super_audit_turbo.md
Informations/: References.md  Technical_Specs.md
_Legacy_Archive_2026_01_30/: .gitignore  Dockerfile  Project_Context.md  README.md  docker-compose.yml  inspect_3mf.py  manage.ps1  requirements.txt  temp_architecture_viz.html
_Legacy_Archive_2026_01_30/.agent/: guidelines.md
_Legacy_Archive_2026_01_30/Informations/: Architecture.md  Data_Architecture_and_Logic.md  External_Integrations.md  Hardware_Acceleration_Analysis.md  Performance_Projections.md  Storage_Optimization_Strategy.md  components.mmd  containers.mmd  context.mmd
_Legacy_Archive_2026_01_30/docs/: project_development_guidelines.md
_Legacy_Archive_2026_01_30/tests/: benchmark_optimization.py
docs/: Agentic_Philosophy.md  Development_Workflow.md  Documentation_Quality_Comparison.md  File_Format_Analysis.md  Hardware_Acceleration_Research.md  Language_Analysis.md  loose_file_processing_design.md
docs/Institutional Engineering Audit/: project_governance_risk_analysis.md.resolved  project_governance_risk_analysis_high.md.resolved  project_governance_risk_analysis_opus.md.resolved
docs/changelogs/: Auto_Processor_Toggle_Changelog.md  Context_Warning_Resolution.md  Skill_Examples_Process.md
docs/development/: Test_Resources.md
docs/templates/: Warning_Resolution_Template.md
docs/test_cases/: TestCase1.md  TestCase3.md  TestLogGuidelines.md
notes/: archival_candidates.md  governance_integration_gaps.md  phase_4_integration_analysis.md  phase_4_sentinel_analysis.md  phase_4_sentinel_plan.md  phase_5_plan.md  skills_workflows_improvement_plan.md  token_efficiency_analysis_v2.md  token_efficiency_analysis_v3.md  token_efficiency_analysis_v5.md  token_efficiency_analysis_v6.md  token_efficiency_analysis_v7_phase2.md  token_efficiency_analysis_v8_headless_script.md  token_efficiency_improvement_plan.md  token_efficiency_milestone.md  v1_dockerhub_roadmap.md  workshop_log.md
output/big-model/: datapackage.json
output/model/: datapackage.json
output/trigger/: datapackage.json
output/trigger-anim/: datapackage.json
output/v1-latest-part/: datapackage.json
scripts/: run_full_audit.sh
src/: config.rs  entrypoint.sh  geometry.rs  main.py  main.rs  metadata.rs  web.rs
src/hal/: image_processor.rs  inference_engine.rs  mod.rs
src/handlers/: base_handler.py  case1_stl.py  case2_makerworld.py  case3_generic.py
src/processor/: context.py  manager.py  watcher.py
static/: index.html
test_resources/: manifest.yaml
tests/: TESTING_STRATEGY.md  benchmark_optimization.py  container_benchmark.py  cucumber_runner.rs  run_local.sh
(+115 files in other folders)
