[package]
name = "manyfold-processor"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
notify = "6.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

