[package]
name = "manyfold-processor"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
notify = "6.1"
anyhow = "1.0"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }
log = "0.4"
env_logger = "0.10"
walkdir = "2.5.0"
serde_yaml = "0.9.34"
sysinfo = "0.29"

[features]
default = []
mock-hardware = []  # Enable mock HAL implementations for Tier 1 simulation

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "cucumber_runner"
harness = false

