[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"
description = "AI Agent governance tools for self-healing and token efficiency."

[dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "audit_dependencies"
path = "src/bin/audit_dependencies.rs"

[[bin]]
name = "check_links"
path = "src/bin/check_links.rs"

[[bin]]
name = "check_gherkin"
path = "src/bin/check_gherkin.rs"

[[bin]]
name = "check_consistency"
path = "src/bin/check_consistency.rs"

[[bin]]
name = "check_constants"
path = "src/bin/check_constants.rs"

[[bin]]
name = "check_context"
path = "src/bin/check_context.rs"

[[bin]]
name = "check_infrastructure"
path = "src/bin/check_infrastructure.rs"

[[bin]]
name = "check_workflow_skip"
path = "src/bin/check_workflow_skip.rs"
